<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.galeca.evacapture.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/button_settings"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_settings"
            android:contentDescription="@string/settings_description"
            android:layout_gravity="start" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/text_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="64sp"
        android:textStyle="bold"
        android:textColor="@color/textColorPrimary"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="74dp"
    />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <Button
        android:id="@+id/button_calendar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calendar_text"
        android:backgroundTint="@color/colorAccent"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/guideline_center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginBottom="8dp"
        />

    <Button
        android:id="@+id/button_courses"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/courses_text"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/textColorPrimary"
        app:layout_constraintTop_toBottomOf="@id/button_calendar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        />

    <TextView
        android:id="@+id/text_owner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/owner_text"
        android:textColor="@color/textColorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="16dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
